Adding work on recaptcha feature.

--- a/forms_builder/forms/templates/forms/form_sent.html
+++ b/forms_builder/forms/templates/forms/form_sent.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>{{ form.title }}</title>
+    {{ form }}
     <style>
         body {font-family:sans-serif; padding:1em 2em;}
         p {width:50em;}
